tests/mm0_mmu/fail/bad-id3.mm0
--  id starting with a digit
sort 0;
